Issue #GRUND-46: Added z-index to map

--- a/scss/modules/_map.scss
+++ b/scss/modules/_map.scss
@@ -11,4 +11,5 @@
   margin-right: auto;
   max-width: 1450px;
   /* End TODO */
+  z-index: z($z-index-elements, map);
 }
